# prefab

./: .cursorignore  .gitignore  Package.swift  Prefab.xctestplan  README.md  default.profraw
.github/workflows/: copilot-instructions.md  objective-c-xcode.yml
Sources/PrefabServer/: Data.swift  HAPUUIDs.swift  HomeBase.swift  PrefabServer.swift  Routes+Accessories.swift  Routes+Groups.swift  Routes+Homes.swift  Routes+Rooms.swift  Routes+Scenes.swift  Routes.swift  Server.swift
cpp-client/: .gitignore  CMakeLists.txt  README.md  build.sh
cpp-client/cmake/: prefab-client-config.cmake.in
cpp-client/examples/: CMakeLists.txt  accessory_control.cpp  discovery_example.cpp  simple_client.cpp
cpp-client/include/prefab/: client.h  models.h  prefab.h
cpp-client/src/: client.cpp
cpp-client/tests/: CMakeLists.txt  test_models.cpp
prefab/: ContentView.swift  prefabApp.swift
prefab-client/: Root.swift
prefab-client/Client/: Client+Accessories.swift  Client+Homes.swift  Client+Rooms.swift  Client.swift
prefab-client/Command/: Prefab+Accessories.swift  Prefab+Homes.swift  Prefab+Rooms.swift
prefab.xcodeproj/: project.pbxproj
prefab.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
prefab.xcodeproj/xcshareddata/xcschemes/: Prefab.xcscheme
prefab.xcodeproj/xcuserdata/kellyplummer.xcuserdatad/xcschemes/: xcschememanagement.plist
prefab/Assets.xcassets/AppIcon.appiconset/: Contents.json
prefab/http/: Data.swift  Routes+Accessories.swift  Routes+Groups.swift  Routes+Homes.swift  Routes+Rooms.swift  Routes+Scenes.swift  Routes.swift  Server.swift
prefab/model/: HomeBase.swift  HomeStore.swift
prefabTests/: HAPUUIDsTests.swift  prefabTests.swift
prefabUITests/: prefabUITests.swift  prefabUITestsLaunchTests.swift
